// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StyledButton should render correctly on Android the button with type cancel 1`] = `
<TouchableNativeFeedback
<<<<<<< Updated upstream
=======
  accessibilityRole="button"
>>>>>>> Stashed changes
  accessible={true}
>
  <View
    style={
      Array [
        Object {
          "borderRadius": 100,
          "justifyContent": "center",
          "padding": 15,
        },
        Object {
          "backgroundColor": "#FFFFFF",
<<<<<<< Updated upstream
          "borderColor": "#848c96",
=======
          "borderColor": "#535A61",
>>>>>>> Stashed changes
          "borderWidth": 1,
        },
        null,
        undefined,
      ]
    }
  />
</TouchableNativeFeedback>
`;

exports[`StyledButton should render correctly on Android the button with type confirm 1`] = `
<TouchableNativeFeedback
<<<<<<< Updated upstream
=======
  accessibilityRole="button"
>>>>>>> Stashed changes
  accessible={true}
>
  <View
    style={
      Array [
        Object {
          "borderRadius": 100,
          "justifyContent": "center",
          "padding": 15,
        },
        Object {
<<<<<<< Updated upstream
          "backgroundColor": "#037dd6",
=======
          "backgroundColor": "#0376C9",
>>>>>>> Stashed changes
          "minHeight": 50,
        },
        null,
        undefined,
      ]
    }
  />
</TouchableNativeFeedback>
`;

exports[`StyledButton should render correctly on Android the button with type normal 1`] = `
<TouchableNativeFeedback
<<<<<<< Updated upstream
=======
  accessibilityRole="button"
>>>>>>> Stashed changes
  accessible={true}
>
  <View
    style={
      Array [
        Object {
          "borderRadius": 100,
          "justifyContent": "center",
          "padding": 15,
        },
        Object {
          "backgroundColor": "#FFFFFF",
<<<<<<< Updated upstream
          "borderColor": "#037dd6",
=======
          "borderColor": "#0376C9",
>>>>>>> Stashed changes
          "borderWidth": 1,
        },
        null,
        undefined,
      ]
    }
  />
</TouchableNativeFeedback>
`;

exports[`StyledButton should render correctly on Android the button with type orange 1`] = `
<TouchableNativeFeedback
<<<<<<< Updated upstream
=======
  accessibilityRole="button"
>>>>>>> Stashed changes
  accessible={true}
>
  <View
    style={
      Array [
        Object {
          "borderRadius": 100,
          "justifyContent": "center",
          "padding": 15,
        },
        Object {
<<<<<<< Updated upstream
          "borderColor": "#f66a0a",
=======
          "borderColor": "#F66A0A",
>>>>>>> Stashed changes
          "borderWidth": 1,
        },
        null,
        undefined,
      ]
    }
  />
</TouchableNativeFeedback>
`;

exports[`StyledButton should render correctly on iOS the button with type cancel 1`] = `
<Button
<<<<<<< Updated upstream
=======
  accessibilityRole="button"
>>>>>>> Stashed changes
  containerStyle={
    Array [
      Object {
        "borderRadius": 100,
        "justifyContent": "center",
        "padding": 15,
      },
      Object {
        "backgroundColor": "#FFFFFF",
<<<<<<< Updated upstream
        "borderColor": "#848c96",
=======
        "borderColor": "#535A61",
>>>>>>> Stashed changes
        "borderWidth": 1,
      },
      undefined,
    ]
  }
  disabledContainerStyle={null}
  style={
    Array [
      Object {
        "fontFamily": "EuclidCircularB-Bold",
        "fontSize": 14,
        "fontWeight": "600",
        "textAlign": "center",
      },
      Object {
<<<<<<< Updated upstream
        "color": "#848c96",
=======
        "color": "#535A61",
>>>>>>> Stashed changes
      },
      undefined,
    ]
  }
  styleDisabled={null}
/>
`;

exports[`StyledButton should render correctly on iOS the button with type confirm 1`] = `
<Button
<<<<<<< Updated upstream
=======
  accessibilityRole="button"
>>>>>>> Stashed changes
  containerStyle={
    Array [
      Object {
        "borderRadius": 100,
        "justifyContent": "center",
        "padding": 15,
      },
      Object {
<<<<<<< Updated upstream
        "backgroundColor": "#037dd6",
=======
        "backgroundColor": "#0376C9",
>>>>>>> Stashed changes
        "minHeight": 50,
      },
      undefined,
    ]
  }
  disabledContainerStyle={null}
  style={
    Array [
      Object {
        "fontFamily": "EuclidCircularB-Bold",
        "fontSize": 14,
        "fontWeight": "600",
        "textAlign": "center",
      },
      Object {
<<<<<<< Updated upstream
        "color": "#FFFFFF",
=======
        "color": "#FCFCFC",
>>>>>>> Stashed changes
      },
      undefined,
    ]
  }
  styleDisabled={null}
/>
`;

exports[`StyledButton should render correctly on iOS the button with type normal 1`] = `
<Button
<<<<<<< Updated upstream
=======
  accessibilityRole="button"
>>>>>>> Stashed changes
  containerStyle={
    Array [
      Object {
        "borderRadius": 100,
        "justifyContent": "center",
        "padding": 15,
      },
      Object {
        "backgroundColor": "#FFFFFF",
<<<<<<< Updated upstream
        "borderColor": "#037dd6",
=======
        "borderColor": "#0376C9",
>>>>>>> Stashed changes
        "borderWidth": 1,
      },
      undefined,
    ]
  }
  disabledContainerStyle={null}
  style={
    Array [
      Object {
        "fontFamily": "EuclidCircularB-Bold",
        "fontSize": 14,
        "fontWeight": "600",
        "textAlign": "center",
      },
      Object {
<<<<<<< Updated upstream
        "color": "#037dd6",
=======
        "color": "#0376C9",
>>>>>>> Stashed changes
      },
      undefined,
    ]
  }
  styleDisabled={null}
/>
`;

exports[`StyledButton should render correctly on iOS the button with type orange 1`] = `
<Button
<<<<<<< Updated upstream
=======
  accessibilityRole="button"
>>>>>>> Stashed changes
  containerStyle={
    Array [
      Object {
        "borderRadius": 100,
        "justifyContent": "center",
        "padding": 15,
      },
      Object {
<<<<<<< Updated upstream
        "borderColor": "#f66a0a",
=======
        "borderColor": "#F66A0A",
>>>>>>> Stashed changes
        "borderWidth": 1,
      },
      undefined,
    ]
  }
  disabledContainerStyle={null}
  style={
    Array [
      Object {
        "fontFamily": "EuclidCircularB-Bold",
        "fontSize": 14,
        "fontWeight": "600",
        "textAlign": "center",
      },
      Object {
<<<<<<< Updated upstream
        "color": "#f66a0a",
=======
        "color": "#F66A0A",
>>>>>>> Stashed changes
      },
      undefined,
    ]
  }
  styleDisabled={null}
/>
`;
